# pi

./: .gitignore  .gitmodules  AGENTS.md  APPEND_SYSTEM.md  ATTRIBUTIONS.md  DECISIONS.md  DESIGN.md  LICENSE  README.md  USAGE.md  keybindings.json  mcp.json  models.json  settings.json  setup.sh  worktree-setup.sh
agents/: context-builder.md  delegate.md  general-purpose.md  merge-conflict-resolver.md  oracle.md  planner.md  researcher.md  reviewer.md  run-monitor.md  scout.md  worker.md
extensions/: answer.ts  compact-advisor.ts  continue.ts  copy-code.ts  files.ts  guardrails.json  pi-openai-service-tier.json  toolchain.json
extensions/claude-ui/: ansi.ts  core.ts  (+3 more)
npm/: package-lock.json  package.json
profiles/pi-valkyrie-agent/: .gitignore  README.md  contract.yaml  pyproject.toml  run_agent.py  setup.sh
profiles/pi-valkyrie-agent/profile/: .gitignore  AGENTS.md  APPEND_SYSTEM.md  allowed-tools.json  mcp.json  package-lock.json  package.json  settings.json  sources.lock.json
profiles/pi-valkyrie-agent/profile/extensions/: pi-openai-service-tier.json  stop.ts  tool-attestation.ts
profiles/pi-valkyrie-agent/profile/extensions/subagent/: config.json
profiles/pi-valkyrie-agent/profile/tests/: profile.test.mjs
profiles/pi-valkyrie-agent/profile/themes/: gruvbox-custom.json
profiles/pi-valkyrie-agent/scripts/: check_profile_rpc.py  verify_profile.py
profiles/pi-valkyrie-agent/tests/: test_contract.py  test_run_agent.py  test_setup.py  test_verify_profile.py
profiles/pi-valkyrie-agent/tests/fixtures/: fake_pi_rpc.py
scripts/: check-guardrails.mjs
(+65 files in other folders)
