[project]
name = "ok-pi-agent"
version = "0.1.0"
description = "Pinned unattended Pi agent bridge for Valkyrie"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
  "basedpyright>=1.31,<2",
  "pytest>=8,<10",
  "PyYAML>=6.0,<7",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["run_agent.py", "tests", "scripts"]
